# FastBGZ

./: CMakeLists.txt  README.md  kel_bgz_main.cpp
kel_app/: kel_exec_env_app.h
kel_io/: kel_bzip_workflow.cpp  kel_bzip_workflow.h  kel_bzip_workflow_verify.cpp  kel_line_record.cpp  kel_line_record.h
kel_thread/: kel_movefunction.h  kel_queue_mt_safe.h  kel_workflow_pipeline.h
